PLD-COMP-RENDU-MERGE/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-59_expression_arithm/gcc-compile.txt
input.c: In function ‘main’:
input.c:6:21: error: expected ‘;’ before ‘)’ token
    6 |     res = (10+a)+(b))/(3*c*20+5));
      |                     ^
      |                     ;
input.c:6:21: error: expected statement before ‘)’ token
input.c:6:22: error: expected expression before ‘/’ token
    6 |     res = (10+a)+(b))/(3*c*20+5));
      |                      ^
input.c:6:33: error: expected statement before ‘)’ token
    6 |     res = (10+a)+(b))/(3*c*20+5));
      |                                 ^

return code: 1
